Camel version in Simplified data provider Added more of the social application and mojo Added toobs:import and completed toobs:parameter Added ! notation to parameters for namespace resolution

--- a/trunk/Social/src/main/resources/layouts/social-layout.clc.xml
+++ b/trunk/Social/src/main/resources/layouts/social-layout.clc.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Layouts xmlns="clc" xmlns:cc="cc" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<Layouts xmlns="clc" xmlns:cc="http://www.toobsframework.org/schema/component" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="
-  clc http://www.toobsframework.org/schema/componentLayoutConfig-0.1.0.xsd
-  cc http://www.toobsframework.org/schema/componentConfig-0.1.0.xsd">
+  http://www.toobsframework.org/schema/layout http://www.toobsframework.org/schema/componentLayoutConfig-0.1.0.xsd
+  http://www.toobsframework.org/schema/component http://www.toobsframework.org/schema/componentConfig-0.1.0.xsd">
 
   <Layout id="home">
     <Section id="declarations" order="0">
@@ -19,9 +19,12 @@
     <Section id="userInfo" order="1">
       <ComponentRef componentId="userInfo" />
     </Section>
-    <Section id="postsByFriends" order="1">
-      <ComponentRef componentId="postsByFriends" />
+    <Section id="browserInfo" order="1">
+      <ComponentRef componentId="browserInfo" />
     </Section>
+    <!-- <Section id="postsByFriends" order="1">
+      <ComponentRef componentId="postsByFriends" />
+    </Section>-->
     <cc:Pipeline>
      <cc:ContentType contentType="xhtml">
        <cc:Transform name="layout/html/home">
