Checking in fix for not being able to find component-manager-xsl Fixing home.xsl for change from RuntimeLayout to layout Adding config time sorting of Sections and ComponentRefs

--- a/trunk/Social/src/main/webapp/WEB-INF/layouts/social-layout.clc.xml
+++ b/trunk/Social/src/main/webapp/WEB-INF/layouts/social-layout.clc.xml
@@ -25,8 +25,9 @@
     <Section id="browserInfo" order="1">
       <ComponentRef componentId="browserInfo" />
     </Section>
-    <Section id="postsByFriends" order="1">
-      <ComponentRef componentId="postsByFriends" />
+    <Section order="1" type="wide">
+      <ComponentRef componentId="postsByFriends" order="2" />
+      <ComponentRef componentId="myPosts" order="1" />
     </Section>
     <cc:Pipeline>
      <cc:ContentType contentType="xhtml">
